nginx-deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/stub_status_nginx.conf
          subPath: stub_status_nginx.conf
      volumes:
      - name: html-volume
        configMap:
          name: nginx-html
          items:
          - key: index.html
            path: index.html
      - name: nginx-config
        configMap:
          name: nginx-html
          items:
          - key: stub_status_nginx.conf
            path: stub_status_nginx.conf
