nginx-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-ingress
  namespace: webserver
spec:
  ingressClassName: hm-nginx
  rules:
  - host: "huyenntn.poc.vnshop.cloud"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: nginx-deployment
              port:
                number: 80
